resolvs toList